--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+
 const pageTitle='About me'
 const identity = {
 	name: 'Geert-Jan',
@@ -7,6 +9,9 @@ const identity = {
 	hobbies: ['Drawing', 'writing', 'reading']
 }
 const skills=["HTML", "CSS", "TypeScript", "Svelte", "Supabase"]
+const skillColor='navy'
+const fontWeight='bold'
+const textCase='uppercase';
 
 const happy = true;
 const finished = false;
@@ -20,6 +25,17 @@ const goal = 3;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+		<style define:vars={{skillColor, fontWeight, textCase}}>
+			h1 {
+				color: purple;
+				font-size: 4rem;
+			}
+			.skill {
+				color: var(--skillColor);
+				font-weight: var(--fontWeight);
+				text-transform: var(--textCase);
+			}
+			</style>
 	</head>
 	<body>
 	
@@ -44,7 +60,7 @@ const goal = 3;
 			</ul>
 			<p>My skills are</p>
 			<ul>
-				{skills.map((skill) => <li>{skill}</li>)}
+				{skills.map((skill) => <li class="skill">{skill}</li>)}
 			</ul>
 
 			{happy && <p>I am happy to be learning Astro.</p>}
