--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css';
-
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 const pageTitle='About me'
 const identity = {
 	name: 'Geert-Jan',
@@ -39,9 +40,7 @@ const goal = 3;
 	</head>
 	<body>
 	
-			<a href="/">Home</a>
-			<a href="/about/">About</a>
-			<a href="/blog">Blog</a>
+		<Header />
 			
 
 
@@ -66,6 +65,9 @@ const goal = 3;
 			{happy && <p>I am happy to be learning Astro.</p>}
 			{finished && <p>I finished this tutorial</p>}
 			{goal === 3 ? <p>My goal is to finish in three days</p> : <p>My goal is not three days.</p>}
-
+<Footer />
+<script>
+	import '../scripts/menu';
+</script>
 	</body>
 </html>
